background images, avatar changed. Highest score feature added.

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -8,23 +8,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/dashboard.css">
-  <title>Dashboard | Flappy Bird</title>
+  <title> Dashboard | Flappy Bird </title>
 </head>
 
 <body>
   <div class="background"></div>
 
   <div class="container main">
-    <!-- <div class="shadow-lg p-3 mb-5 bg-body rounded"> -->
     <form class="home-form shadow-lg p-5 rounded-3 needs-validation" action="setting.html">
 
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="inputName" placeholder="E.g. Shyam" required autofocus>
+        <input type="text" class="form-control" id="inputName" placeholder="E.g. Shyam" required autofocus
+          autocomplete="off">
         <label for="inputName" class="form-label">Name</label>
       </div>
 
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="inputAge" placeholder="E.g. 18" required>
+        <input type="text" class="form-control" id="inputAge" placeholder="E.g. 18" required autocomplete="off">
         <label for="inputAge" class="form-label">Age</label>
       </div>
 
