--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       display: table-cell;
       vertical-align: middle;
     }
+    .btn:hover{
+      transform: scale(1.1);
+    }
   </style>
 </head>
 
